fixed scrollbar issue

--- a/app/www/css/base.css
+++ b/app/www/css/base.css
@@ -2,8 +2,10 @@
 
 body, html {
     height: 100%;
-    
+
 }
+
+
 
 *, ::after, ::before {
     box-sizing: border-box;
@@ -11,7 +13,24 @@ body, html {
 
 body{
     padding-top: 4rem;
+
 }
+
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+    width: 10px;
+    background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb
+{
+    background-color: #e2e2db;
+   }
 
 nav{
     background-color: white;
@@ -46,9 +65,10 @@ nav{
     -o-background-size: cover;
     background-size: cover;
 
+
 }
 
-h3 {
+h7 {
     font-size: 26px !important;
     font-weight: bold;
     margin: 50px 0 30px 0;
@@ -78,3 +98,8 @@ table {
 
 }
 
+h3 {
+    font-weight:bold;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
